--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,12 @@
 asgiref==3.4.1
-backcall==0.2.0
-certifi==2021.5.30
-cffi==1.14.6
-chardet==4.0.0
-colorama==0.4.4
-cryptography==3.4.8
-decorator==5.0.9
-defusedxml==0.7.1
 Django==3.2.5
--e git+https://github.com/jazzband/django-debug-toolbar.git@9b6aae4d96a9ed2e80bc173b198243f6119bc97b#egg=django_debug_toolbar
-django-environ==0.4.5
-idna==2.10
-ipython==7.25.0
-ipython-genutils==0.2.0
-jedi==0.18.0
-matplotlib-inline==0.1.2
-oauthlib==3.1.1
-parso==0.8.2
-pickleshare==0.7.5
 Pillow==8.3.1
-prompt-toolkit==3.0.19
-pycparser==2.20
-Pygments==2.9.0
-PyJWT==2.1.0
-python3-openid==3.2.0
-pytz==2021.1
+django-environ==0.4.5
 requests==2.25.1
+pytz==2021.1
 requests-oauthlib==1.3.0
 social-auth-app-django==5.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
-traitlets==5.0.5
-urllib3==1.26.6
-wcwidth==0.2.5
+django-debug-toolbar
+django-debug-toolbar-template-profiler
